# pneumo

./: .gitignore  Dockerfile  README.md  form_v0_0_2.py  install.sh  pyproject.toml  run.sh  test
Arduino/23/chech_germetic/new_pid_edition/: new_pid_edition.ino
Arduino/23/pid/new_pid_edition/: new_pid_edition.ino
dockerfiles/: Dockerfile
press_app_qt/: app0.py  app1.py  calc.ui  form.py  go.py  image.ui
press_app_qt/app_x/: 1.py  2.py  MOf_matplotlib.ipynb  client.py  form.py  form_v0_0_2.py  form_v0_0_3.py  main.py  plotter_client.py  plotter_server.py  server.py  tread.py  unit.py
press_app_qt/app_x/deprecated_forms/: form.py  form_v0.0.3.ui  form_v0.1.ui  form_v0.2.ui  form_v0_0_2.py
press_app_qt/app_x/tests/: app0.spec  app2.py  client.py  event_test.py  events.py  test_srial.py
